Major update! fixed the way smartgwt components are created in the vaadin tree. the getElement() method is a hack, but it works quite well.